# ShogiAI

./: main.ipynb  mnist_nn.ipynb  pyproject.toml
