[project]
name = "strong-syogi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "torch",
    "torchvision",
]


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"   # リソースのURL
explicit = true

[tool.uv.sources]
torch = {index = "pytorch"}
torchvision = {index = "pytorch"}
